# hackyeah-2024-building-genai-apps

./: .env.template  README.md  docker-compose.yml  environment.yaml  pyproject.toml
custom_components/: Amazon Bedrock.json  ConditionalRouter.py  MultiQueryRetriever.json  MultiQueryRetriever.py
