[tool.poetry]
name = "Building GenAI Apps - HackYeah 2024"
version = "0.1.0"
description = ""
authors = ["konradbjk"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
langflow = "^1.0.9"
langchain-community = "^0.3.0"
langchain = "^0.3.0"
qdrant-client = "^1.10.1"
langchain-openai = "^0.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"